@@ -4,6 +4,7 @@ postgresql-common (205) UNRELEASED; urgency=medium
   * testsuite: Prefer PgCommon.pm from current directory.
   * pgcommon.sh: Remove obsolete Ubuntu code in locale_gen function.
   * Drop lsb-release dependencies, we prefer /etc/os-release anyway.
+  * apt.postgresql.org.sh: Parse VERSION_CODENAME in /etc/os-release.
 
  -- Christoph Berg <myon@debian.org>  Mon, 02 Sep 2019 16:57:54 +0200
 
